--- a/www/css/style.css
+++ b/www/css/style.css
@@ -364,3 +364,57 @@ header button {
 	content: '';
 	clear: both;
 }
+
+div.shadow {
+	display: none;
+	position: fixed;
+	left:0;top: 0;right:0;bottom: 0;
+	background: rgba(0, 0, 0, 0.41);
+}
+
+div.shadow form {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -105px 0 0 -125px;
+	width: 250px;
+	height: 205px;
+	background: #fff;
+	border-radius: 7px;
+}
+
+div.shadow form input{
+	width: 210px;
+	outline: 0;
+	margin: 5px 20px;
+	padding: 10px 0px;
+	border: 0;
+	border-bottom: 2px #EEE solid;
+}
+
+div.shadow form input[type=submit] {
+	margin-top: 20px;
+	border-radius: 5px;
+	padding: 17px;
+	font-size: 16px;
+	font-weight: 500;
+	cursor: pointer;
+	background: #EEE;
+	border: 1px #E0E0E0 solid;
+	box-shadow: 0 0 3px #CCCCCC, inset 0 0 5px #FAFAFA;
+}
+
+div.shadow form input:nth-child(1) {
+	margin-top: 20px;
+}
+
+div.shadow form div.cancel {
+	position: absolute;
+	left: 228px;
+	top: 0px;
+	width: 20px;
+	height: 20px;
+	background: url(../img/cancel.png) no-repeat;
+	background-size: 115%;
+	cursor: pointer;
+}
