--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,6 +3,8 @@
 	margin: 0;
 }
 
+a { text-decoration: none;}
+
 ul {
 	list-style: none;
 }
@@ -48,13 +50,18 @@ nav.top ul {
 
 nav.top ul li {
 	display: table-cell;
-	font-family: "Arial";
-	color: #2a5966;
 	text-align: center;
 	height: 40px;
 	vertical-align: middle;
-	padding: 0 10px 0 10px;
+}
+
+nav.top ul li a {
+	display: block;
+	padding: 11px 10px 11px 10px;
 	cursor: pointer;
+	font-family: "Arial";
+	color: #2a5966;
+
 }
 
 nav.top ul li:hover, nav.top ul li.active {
@@ -273,10 +280,77 @@ header button {
 	color: #4a7940
 }
 
+.block-3 {
+	margin-bottom: 80px;
+}
+
+.block-3 h1 {
+	font-size: 32px;
+	text-align: center;
+	color: #7a7a7a;
+	padding: 0 0 40px 0;
+}
+
+.block-3 h2 {
+	font-size: 22px;
+	color: #7a7a7a;
+	padding: 0 0 20px 20px
+}
+
+.block-3 .wrapper div {
+	float: left;
+	margin: 0 20px 0 0;
+}
+
+.block-3 .wrapper div:last-child {
+	margin: 0;
+}
+
+.block-3 .wrapper div:after {
+	display: block;
+	content: '';
+	clear: both;
+}
+
+.block-3 .wrapper div ul {
+	width: 280px;
+	padding: 20px 20px;
+}
+
+.block-3 .wrapper div ul.plus {
+	color: #5c8553;
+	background: #9ce28c url(../img/block-3-plus.png) no-repeat right bottom;
+	border-radius: 6px 6px 0 0;
+}
+
+.block-3 .wrapper div:nth-child(2) ul.plus {
+	border-radius: 6px;
+}
+
+.block-3 .wrapper div ul li:last-child {
+	margin: 0;
+}
+
+.block-3 ul.minus {
+	color: #8b7d3d;
+	background: #ead46d url(../img/block-3-minus.png) no-repeat right bottom;
+	border-radius: 0 0 6px 6px;
+	background-size: 36%;
+}
+
+.block-3 .wrapper div ul li {
+	margin: 0 0 20px 0;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+}
+
 .block-4 h1 {
 	font-size: 32px;
 	text-align: center;
 	padding: 0 0 40px 0;
+}
+
+.block-4 {
+	margin-bottom: 80px;
 }
 
 .block-4 h2  {
@@ -288,7 +362,7 @@ header button {
 .block-4 section {
 	width: 50%;
 	float: left;
-	padding: 0px 0px 20px 0;
+	padding: 0px 0px 50px 0;
 }
 
 .block-4 section h1 {
@@ -358,11 +432,66 @@ header button {
 	bottom: 17px;
 }
 
-
 .block-4 div.fix:after {
 	display: block;
 	content: '';
 	clear: both;
+}
+
+.block-6 {
+	margin-bottom: 60px;
+	background: #f6f6f6;
+	padding: 20px 0 20px 0;
+}
+
+.block-6 h1 {
+	font-size: 32px;
+	text-align: center;
+	padding: 0 0 40px 0;
+}
+
+.block-6 p {
+	text-align: center;
+	padding: 0 0 20px 0;
+}
+
+.block-7 {
+	margin: 0 0 80px 0;
+}
+
+.block-7 h1 {
+	font-size: 32px;
+	text-align: center;
+	padding: 0px 0 40px 0;
+}
+
+.block-7 .list-col2 {
+	width: 50%;
+	float: left;
+}
+
+.block-7 .list-col2 div.row {
+	display: table;
+	padding: 0 25px 20px 0;
+}
+
+.block-7 .list-col2 div.row div.img {
+	height: 100%;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.block-7 .list-col2 div.row p {
+	padding: 0 0 0 20px;
+	font-size: 22px;
+	display: table-cell;
+	vertical-align: middle;
+	font-family: 'Roboto Condensed', sans-serif;
+}
+
+.block-7 .list-col2 div.row p span {
+	font-size: 14px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 div.shadow {
