--- a/www/css/style.css
+++ b/www/css/style.css
@@ -151,6 +151,10 @@ header button {
 	text-shadow: 0px 2px 0px #5aac8c;
 }
 
+.block-1 {
+	margin-bottom: 60px;
+}
+
 .block-1 section {
 	margin: 0 auto;
 	width: 982px;
@@ -204,7 +208,7 @@ header button {
 }
 
 .block-1 div:nth-child(3) {
-	margin: 0 auto;
+	margin: 0px auto 20px;
 	width: 283px;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 25px;
@@ -215,10 +219,30 @@ header button {
 	margin: 0px 155px 0 20px;
 }
 
-.block-1 div.sofa img {
-	display: block;
-	margin: 0 auto;
+.block-1 div.sofa {
+	position: relative;
+	height: 364px;
 }
+
+.block-1 div.sofa {
+	margin: 0 auto;
+	width: 804px;
+}
+
+.block-1 div.sofa div:nth-child(2) {
+	margin: -368px 0 0 0;
+	width: 50%;
+	overflow: hidden;
+}
+
+.block-1 div.sofa div:nth-child(3) {
+	position: absolute;
+	top: 38%;
+	left: 50%;
+	width: 93px;
+	margin: -32px 0 0 -47px;
+}
+
 
 .block-2 {
 	background: #f6f6f6;
@@ -230,7 +254,7 @@ header button {
 	font-size: 32px;
 	color: rgb(122, 122, 122);
 	text-align: center;
-	padding: 40px 0 40px 0;
+	padding: 20px 0 40px 0;
 }
 
 .block-2 .list-col2 {
