--- a/AquaClean/css/style.css
+++ b/AquaClean/css/style.css
@@ -485,8 +485,14 @@ header button {
 	padding: 0 0 30px 0;
 }
 
+.block-6 .wrapper div {
+	padding: 0 0 0 180px;
+	background: url(../img/icon-6.png) no-repeat left top;
+	margin: 0 auto;
+	width: 418px;
+}
+
 .block-6 p {
-	text-align: center;
 	padding: 0 0 20px 0;
 }
 
@@ -630,14 +636,14 @@ header button {
 
 .block-call .wrapper div p {
 	text-align: center;
-	padding: 100px 0px 0 94px;
+	padding: 100px 0px 0 0px;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 24px;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
 }
 
 .block-call .wrapper .phones {
-	margin: 17px 0 0 205px;
+	margin: 16px 0 0 160px;
 	padding: 16px 0 0 115px;
 	background: url(../img/block-call-ico.png) no-repeat left top;
 }
