--- a/Numismatists/css/style.css
+++ b/Numismatists/css/style.css
@@ -19,13 +19,7 @@ body {
 	color: #494949;
 }
 
-h1, h2, h3, h4, h5 {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 400;
-}
-
 .wrapper {
-	background: #fff;
 	width: 1260px;
 	margin: 0 auto;
 	position: relative;
@@ -41,16 +35,20 @@ h1, h2, h3, h4, h5 {
 }
 
 header {
-	background: #383737;
-	width: 100%;
-	height: 50px;
+	
 }
 
 header .wrapper {
+	
+}
+
+header nav {
+	width: 100%;
+	height: 50px;
 	background: #383737;
 }
 
-header .wrapper nav {
+nav ul {
 	padding: 13px 0 0 40px;
 	float: left;
 }
@@ -77,6 +75,108 @@ header .wrapper button {
 	margin: 7px 40px 0 0;
 }
 
+header .wrapper .cover {
+	height: 182px;
+	background: #fff;
+}
+
+header div.logo {
+	padding: 50px 0 65px 40px;
+	float: left;
+	width: 300px;
+}
+
+header div.logo a {
+	text-decoration: none;
+}
+
+header div.logo img {
+	float: left;
+	padding: 0 20px 0 0;
+}
+
+header div.logo section {
+	padding: 7px 0 0 0;
+}
+
+header div.logo section h1 {
+	font-size: 30px;
+	font-weight: 500;
+	color: #262626;
+}
+
+header div.logo section h2 {
+	font-size: 18px;
+	font-weight: 300;
+	color: #383737;
+	line-height: 10px;
+}
+
+header div.last {
+	float: right;
+	width: 706px;
+	height: 152px;
+	position: relative;
+	padding: 0 32px 0 32px;
+	margin: 14px 82px 0 0;
+}
+
+header div.last p.title {
+	padding: 0 0 12px 0;
+	font-size: 16px;
+	font-weight: 500;
+	text-transform: uppercase;
+	color: #393635
+}
+
+header div.last ul li {
+	float: left;
+	width: 80px;
+	margin: 0 20px 0 0;
+}
+
+header div.last ul li:last-child {
+	margin: 0;
+}
+
+header div.last ul li a {
+	cursor: pointer;
+	display: block;
+}
+
+header div.last ul li a div {
+	width: 78px;
+	height: 78px;
+	border: solid 1px #f2f5f8;
+	border-radius: 6px;
+}
+
+header div.last ul li a p {
+	color: #383737;
+	font-size: 14px;
+	text-align: center;
+	padding: 2px 0 0 0;
+	line-height: 18px;
+}
+
+header div.last .prev {
+	position: absolute;
+	top: 66px;
+	left: 0px;
+	width: 12px;
+	height: 20px;
+	background: url(../img/arrow.png) no-repeat 0 0;
+}
+
+header div.last .next {
+	position: absolute;
+	top: 66px;
+	right: 24px;
+	width: 12px;
+	height: 20px;
+	background: url(../img/arrow.png) no-repeat -12px 0;
+}
+
 footer {
 	height: 192px;
 	background: #383737;
@@ -89,7 +189,7 @@ footer .wrapper {
 }
 
 footer nav {
-	width: 865px;
+	width: 904px;
 	height: 30px;
 	padding: 36px 0 20px 0;
 	margin: 0 auto;
@@ -109,6 +209,10 @@ footer div.soc:after {
 footer div.soc ul li {
 	float: left;
 	margin: 0 20px 0 0;
+}
+
+footer div.soc ul li a {
+	cursor: pointer;
 }
 
 footer div.soc ul li:last-child {
@@ -146,6 +250,8 @@ footer div.soc li:nth-child(4) a {
 footer p.copy {
 	margin: 28px 0 0 0;
 	font-size: 14px;
+	font-weight: 300;
+	color: #fff;
 }
 
 div.shadow {
