--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -402,56 +402,94 @@ footer p.copy {
 }
 
 div.shadow {
-	display: none;
-	position: fixed;
-	left:0;top: 0;right:0;bottom: 0;
-	background: rgba(0, 0, 0, 0.41);
-	z-index: 3000;
+ display: block;
+ position: fixed;
+ left:0;top: 0;right:0;bottom: 0;
+ background: rgba(0, 0, 0, 0.41);
+ z-index: 900;
+}
+
+div.shadow .modal {
+ position: absolute;
+ left: 50%;
+ top: 116px;
+ margin: 0px 0 0 -150px;
+ width: 256px;
+ background: #f2f5f8;
+ padding: 27px 22px;
+ border-radius: 6px;
+}
+
+div.shadow .modal .title {
+ position: relative;
+}
+
+div.shadow .modal .title span {
+ color: #393635;
+ font-weight: 600;
+ display: block;
+ text-transform: uppercase;
+}
+
+div.shadow .modal .title a {
+ color: #65abd0;
+ font-weight: 600;
+ position: absolute;
+ right: 0px;
+ top: 1px;
+ font-size: 14px;
 }
 
 div.shadow form {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin: -105px 0 0 -125px;
-	width: 250px;
-	height: 205px;
-	background: #fff;
-	border-radius: 7px;
+ padding: 0 8px 0 8px;
 }
 
-div.shadow form input{
-	width: 210px;
-	outline: 0;
-	margin: 5px 20px;
-	padding: 10px 0px;
-	border: 0;
-	border-bottom: 2px #EEE solid;
+div.shadow form > input {
+ width: 236px;
+ margin: 12px 0px;
+ border: 2px #c6ccd2 solid;
+ border-radius: 6px;
+ color: #383737;
+ line-height: 44px;
+ font-size: 16px;
 }
+
+div.shadow form > input:nth-child(1) {
+ background: #fff, url(../img/input-bg.png) no-repeat 13px 15px;
+}
+
+div.shadow form > input:nth-child(2) {
+ background: #fff, url(../img/input-bg.png) no-repeat 13px 15px;
+}
+
+div.shadow form > input::-webkit-input-placeholder {color:#c6ccd2; font-style: italic;}
+div.shadow form > input::-moz-placeholder          {color:#c6ccd2; font-style: italic;}
+div.shadow form > input:-moz-placeholder           {color:#c6ccd2; font-style: italic;}
+div.shadow form > input:-ms-input-placeholder      {color:#c6ccd2; font-style: italic;}
 
 div.shadow form input[type=submit] {
-	margin-top: 20px;
-	border-radius: 5px;
-	padding: 17px;
-	font-size: 16px;
-	font-weight: 500;
-	cursor: pointer;
-	background: #EEE;
-	border: 1px #E0E0E0 solid;
-	box-shadow: 0 0 3px #CCCCCC, inset 0 0 5px #FAFAFA;
+ margin-top: 20px;
+ border-radius: 5px;
+ padding: 17px;
+ font-size: 16px;
+ font-weight: 500;
+ cursor: pointer;
+ background: #EEE;
+ border: 1px #E0E0E0 solid;
+ box-shadow: 0 0 3px #CCCCCC, inset 0 0 5px #FAFAFA;
 }
 
 div.shadow form input:nth-child(1) {
-	margin-top: 20px;
+ margin-top: 20px;
 }
 
 div.shadow form div.cancel {
-	position: absolute;
-	left: 228px;
-	top: 0px;
-	width: 20px;
-	height: 20px;
-	background: url(../img/cancel.png) no-repeat;
-	background-size: 115%;
-	cursor: pointer;
+ position: absolute;
+ left: 228px;
+ top: 0px;
+ width: 20px;
+ height: 20px;
+ background: url(../img/cancel.png) no-repeat;
+ background-size: 115%;
+ cursor: pointer;
 }
