--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -1,22 +1,23 @@
 * {
-	padding: 0;
-	margin: 0;
-	border: 0;
-	outline: 0;
-
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline: 0;
 }
 
-a { text-decoration: none;}
+a {
+  text-decoration: none;
+}
 
 nav, menu, ul {
-	list-style: none;
+  list-style: none;
 }
 
 body {
-	background-color: #b4bbc2;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 16px;
-	color: #494949;
+  background-color: #b4bbc2;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  color: #494949;
 }
 
 .unselect, .prev, .next {
@@ -27,173 +28,173 @@ body {
 }
 
 .wrapper {
-	width: 1260px;
-	margin: 0 auto;
-	position: relative;
+  width: 1260px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .wrapper:after {
-	display: block;
-	content: '';
-	clear: both;
+  display: block;
+  content: '';
+  clear: both;
 }
 
 .button {
-	padding: 10px 47px 8px 47px;
-	color: #fff;
-	font-weight: 500;
-	border-radius: 6px;
-	font-size: 16px;
-	cursor: pointer;
+  padding: 10px 47px 8px 47px;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 .cover:after {
-	position: absolute;
-	bottom: 1px;
-	left: 40px;
-	width: 1180px;
-	height: 1px;
-	content: '';
-	background: #f2f5f8;
+  position: absolute;
+  bottom: 1px;
+  left: 40px;
+  width: 1180px;
+  height: 1px;
+  content: '';
+  background: #f2f5f8;
 }
 
 .stars span {
-	display: block;
-	height: 17px;
-	width: 17px;
-	margin: 0 7px 0 0;
-	background: url(../img/star.png) no-repeat 0 0;
-	float: left;
-	cursor: pointer;
+  display: block;
+  height: 17px;
+  width: 17px;
+  margin: 0 7px 0 0;
+  background: url(../img/star.png) no-repeat 0 0;
+  float: left;
+  cursor: pointer;
 }
 
 .stars span:hover, .stars span.active {
-	background: url(../img/star.png) no-repeat -17px 0;
+  background: url(../img/star.png) no-repeat -17px 0;
 }
 
 .stars span:last-child {
-	margin: 0;
+  margin: 0;
 }
 
 header {
-	position: relative;
+  position: relative;
 }
 
 header nav {
-	width: 100%;
-	height: 50px;
-	background: #383737;
+  width: 100%;
+  height: 50px;
+  background: #383737;
 }
 
 nav ul {
-	padding: 13px 0 0 40px;
-	float: left;
+  padding: 13px 0 0 40px;
+  float: left;
 }
 
 nav li {
-	float: left;
-	margin: 0 35px 0 0;
+  float: left;
+  margin: 0 35px 0 0;
 }
 
 nav li:after {
-	content: '';
-	display: block;
-	clear: both;
+  content: '';
+  display: block;
+  clear: both;
 }
 
 nav li a {
-	color: #fff;
-	cursor: pointer;
+  color: #fff;
+  cursor: pointer;
 }
 
 header .wrapper button {
-	float: right;
-	background: #77bfe5;
-	margin: 7px 40px 0 0;
+  float: right;
+  background: #77bfe5;
+  margin: 7px 40px 0 0;
 }
 
 header .wrapper .cover {
-	height: 182px;
-	background: #fff;
-	position: relative;
+  height: 182px;
+  background: #fff;
+  position: relative;
 }
 
 header div.logo {
-	padding: 50px 0 0 40px;
-	float: left;
-	width: 300px;
+  padding: 50px 0 0 40px;
+  float: left;
+  width: 300px;
 }
 
 header div.logo a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 header div.logo img {
-	float: left;
-	padding: 0 20px 0 0;
+  float: left;
+  padding: 0 20px 0 0;
 }
 
 header div.logo section {
-	padding: 7px 0 0 0;
+  padding: 7px 0 0 0;
 }
 
 header div.logo hgroup h1 {
-	font-size: 30px;
-	font-weight: 700;
-	color: #262626;
+  font-size: 30px;
+  font-weight: 700;
+  color: #262626;
 }
 
 header div.logo hgroup h2 {
-	font-size: 18px;
-	font-weight: 500;
+  font-size: 18px;
+  font-weight: 500;
   letter-spacing: -1px;
-	color: #383737;
-	line-height: 10px;
+  color: #383737;
+  line-height: 10px;
 }
 
 header div.last {
-	float: right;
-	width: 706px;
-	height: 152px;
-	position: relative;
-	padding: 0 32px 0 32px;
-	margin: 14px 82px 0 0;
+  float: right;
+  width: 706px;
+  height: 152px;
+  position: relative;
+  padding: 0 32px 0 32px;
+  margin: 14px 82px 0 0;
 }
 
 header div.last p.title {
-	padding: 0 0 12px 0;
-	font-size: 16px;
-	font-weight: 700;
-	text-transform: uppercase;
-	color: #393635
+  padding: 0 0 12px 0;
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #393635;
 }
 
 header div.last ul li {
-	float: left;
-	width: 80px;
-	margin: 0 20px 0 0;
+  float: left;
+  width: 80px;
+  margin: 0 20px 0 0;
 }
 
 header div.last ul li:last-child {
-	margin: 0;
+  margin: 0;
 }
 
 header div.last ul li a {
-	cursor: pointer;
-	display: block;
+  cursor: pointer;
+  display: block;
 }
 
 header div.last ul li a div {
-	width: 78px;
-	height: 78px;
-	border: solid 1px #f2f5f8;
-	border-radius: 6px;
+  width: 78px;
+  height: 78px;
+  border: solid 1px #f2f5f8;
+  border-radius: 6px;
   overflow: hidden;
 }
 
 header div.last ul li a p {
-	color: #383737;
-	font-size: 13px;
+  color: #383737;
+  font-size: 13px;
   font-weight: 600;
   text-align: center;
   padding: 2px 0 0 0;
@@ -201,40 +202,40 @@ header div.last ul li a p {
 }
 
 header div.last .prev {
-	position: absolute;
-	top: 66px;
-	left: 0px;
-	width: 12px;
-	height: 20px;
-	background: url(../img/arrow.png) no-repeat 0 0;
-	cursor: pointer;
-	opacity: 0.5;
+  position: absolute;
+  top: 66px;
+  left: 0px;
+  width: 12px;
+  height: 20px;
+  background: url(../img/arrow.png) no-repeat 0 0;
+  cursor: pointer;
+  opacity: 0.5;
 }
 
 header div.last .prev:hover, header div.last .next:hover {
-	opacity: 1;
+  opacity: 1;
 }
 
 header div.last .next {
-	position: absolute;
-	top: 66px;
-	right: 24px;
-	width: 12px;
-	height: 20px;
-	background: url(../img/arrow.png) no-repeat -12px 0;
-	cursor: pointer;
-	opacity: 0.5;
+  position: absolute;
+  top: 66px;
+  right: 24px;
+  width: 12px;
+  height: 20px;
+  background: url(../img/arrow.png) no-repeat -12px 0;
+  cursor: pointer;
+  opacity: 0.5;
 }
 
 .wrapper .content {
-	background: #fff;
-	padding: 40px;
+  background: #fff;
+  padding: 40px;
 }
 
 .wrapper .content:after {
-	display: block;
-	content: '';
-	clear: both;
+  display: block;
+  content: '';
+  clear: both;
 }
 
 .wrapper .content aside {
@@ -246,39 +247,39 @@ header div.last .next {
 }
 
 .wrapper .content aside p.title {
-	font-weight: 700;
-	color: #393635;
-	text-transform: uppercase;
+  font-weight: 700;
+  color: #393635;
+  text-transform: uppercase;
 }
 
 .wrapper .content aside menu {
-	padding: 8px 0 0 34px;
+  padding: 8px 0 0 34px;
 }
 
 .wrapper .content aside menu ul li {
-	margin: 14px 0 0 0;
+  margin: 14px 0 0 0;
 }
 
 .wrapper .content aside menu ul li span {
-	color: #383737;
-	font-weight: 600;
+  color: #383737;
+  font-weight: 600;
 }
 
 .wrapper .content section.items {
-	float: left;
-	padding: 0 0 0 20px;
+  float: left;
+  padding: 0 0 0 20px;
   width: 879px;
 }
 
 .wrapper .content section.items article.item {
-	padding: 20px 0 20px 0;
-	border-bottom: solid 1px #f2f5f8;
+  padding: 20px 0 20px 0;
+  border-bottom: solid 1px #f2f5f8;
 }
 
 .wrapper .content section.items article.item:after {
-	display: block;
-	content: '';
-	clear: both;
+  display: block;
+  content: '';
+  clear: both;
 }
 
 .wrapper .content section.items article.item div.img {
@@ -296,20 +297,20 @@ header div.last .next {
 }
 
 .wrapper .content section.items article.item div.info {
-	padding: 0 0 0 160px;
+  padding: 0 0 0 160px;
 }
 
 .wrapper .content section.items article.item div.info a.title {
-	font-size: 24px;
-	color: #383737;
-	line-height: 18px;
+  font-size: 24px;
+  color: #383737;
+  line-height: 18px;
 }
 
 .wrapper .content section.items article.item div.info p.price {
-	font-size: 25px;
-	color: #262626;
-	font-weight: 600;
-	margin: 17px 0 13px 0;
+  font-size: 25px;
+  color: #262626;
+  font-weight: 600;
+  margin: 17px 0 13px 0;
 }
 
 .wrapper .content section.items article.item div.info p.price:after {
@@ -325,171 +326,189 @@ header div.last .next {
 }
 
 footer {
-	height: 192px;
-	background: #383737;
-	width: 100%;
-	text-align: center;
+  height: 192px;
+  background: #383737;
+  width: 100%;
+  text-align: center;
 }
 
 footer .wrapper {
-	background: #383737;
+  background: #383737;
 }
 
 footer nav {
-	width: 904px;
-	height: 30px;
-	padding: 36px 0 20px 0;
-	margin: 0 auto;
+  width: 904px;
+  height: 30px;
+  padding: 36px 0 20px 0;
+  margin: 0 auto;
 }
 
 footer div.soc {
-	width: 204px;
-	margin: 0 auto;
+  width: 204px;
+  margin: 0 auto;
 }
 
 footer div.soc:after {
-	display: block;
-	content: '';
-	clear: both;
+  display: block;
+  content: '';
+  clear: both;
 }
 
 footer div.soc ul li {
-	float: left;
-	margin: 0 20px 0 0;
+  float: left;
+  margin: 0 20px 0 0;
 }
 
 footer div.soc ul li a {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 footer div.soc ul li:last-child {
-	margin: 0;
+  margin: 0;
 }
 
 footer div.soc li:nth-child(1) a {
-	display: block;
-	width: 36px;
-	height: 36px;
-	background: url(../img/soc-ico.png) no-repeat 0px 0px;
+  display: block;
+  width: 36px;
+  height: 36px;
+  background: url(../img/soc-ico.png) no-repeat 0px 0px;
 }
 
 footer div.soc li:nth-child(2) a {
-	display: block;
-	width: 36px;
-	height: 36px;
-	background: url(../img/soc-ico.png) no-repeat -36px 0px;
+  display: block;
+  width: 36px;
+  height: 36px;
+  background: url(../img/soc-ico.png) no-repeat -36px 0px;
 }
 
 footer div.soc li:nth-child(3) a {
-	display: block;
-	width: 36px;
-	height: 36px;
-	background: url(../img/soc-ico.png) no-repeat -72px 0px;
+  display: block;
+  width: 36px;
+  height: 36px;
+  background: url(../img/soc-ico.png) no-repeat -72px 0px;
 }
 
 footer div.soc li:nth-child(4) a {
-	display: block;
-	width: 36px;
-	height: 36px;
-	background: url(../img/soc-ico.png) no-repeat -108px 0px;
+  display: block;
+  width: 36px;
+  height: 36px;
+  background: url(../img/soc-ico.png) no-repeat -108px 0px;
 }
 
 footer p.copy {
-	margin: 28px 0 0 0;
-	font-size: 14px;
-	font-weight: 300;
-	color: #fff;
+  margin: 28px 0 0 0;
+  font-size: 14px;
+  font-weight: 300;
+  color: #fff;
 }
 
 div.shadow {
- display: block;
- position: fixed;
- left:0;top: 0;right:0;bottom: 0;
- background: rgba(0, 0, 0, 0.41);
- z-index: 900;
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.41);
+  z-index: 900;
 }
 
 div.shadow .modal {
- position: absolute;
- left: 50%;
- top: 116px;
- margin: 0px 0 0 -150px;
- width: 256px;
- background: #f2f5f8;
- padding: 27px 22px;
- border-radius: 6px;
+  position: absolute;
+  left: 50%;
+  top: 116px;
+  margin: 0px 0 0 -150px;
+  width: 256px;
+  background: #f2f5f8;
+  padding: 27px 22px;
+  border-radius: 6px;
 }
 
 div.shadow .modal .title {
- position: relative;
+  position: relative;
 }
 
 div.shadow .modal .title span {
- color: #393635;
- font-weight: 600;
- display: block;
- text-transform: uppercase;
+  color: #393635;
+  font-weight: 600;
+  display: block;
+  text-transform: uppercase;
 }
 
 div.shadow .modal .title a {
- color: #65abd0;
- font-weight: 600;
- position: absolute;
- right: 0px;
- top: 1px;
- font-size: 14px;
+  color: #65abd0;
+  font-weight: 600;
+  position: absolute;
+  right: 0px;
+  top: 1px;
+  font-size: 14px;
 }
 
 div.shadow form {
- padding: 0 8px 0 8px;
+  padding: 0 8px 0 8px;
 }
 
 div.shadow form > input {
- width: 236px;
- margin: 12px 0px;
- border: 2px #c6ccd2 solid;
- border-radius: 6px;
- color: #383737;
- line-height: 44px;
- font-size: 16px;
+  width: 236px;
+  margin: 12px 0px;
+  border: 2px #c6ccd2 solid;
+  border-radius: 6px;
+  color: #383737;
+  line-height: 44px;
+  font-size: 16px;
 }
 
 div.shadow form > input:nth-child(1) {
- background: #fff, url(../img/input-bg.png) no-repeat 13px 15px;
+  background: #fff, url(../img/input-bg.png) no-repeat 13px 15px;
 }
 
 div.shadow form > input:nth-child(2) {
- background: #fff, url(../img/input-bg.png) no-repeat 13px 15px;
+  background: #fff, url(../img/input-bg.png) no-repeat 13px 15px;
 }
 
-div.shadow form > input::-webkit-input-placeholder {color:#c6ccd2; font-style: italic;}
-div.shadow form > input::-moz-placeholder          {color:#c6ccd2; font-style: italic;}
-div.shadow form > input:-moz-placeholder           {color:#c6ccd2; font-style: italic;}
-div.shadow form > input:-ms-input-placeholder      {color:#c6ccd2; font-style: italic;}
+div.shadow form > input::-webkit-input-placeholder {
+  color: #c6ccd2;
+  font-style: italic;
+}
+
+div.shadow form > input::-moz-placeholder {
+  color: #c6ccd2;
+  font-style: italic;
+}
+
+div.shadow form > input:-moz-placeholder {
+  color: #c6ccd2;
+  font-style: italic;
+}
+
+div.shadow form > input:-ms-input-placeholder {
+  color: #c6ccd2;
+  font-style: italic;
+}
 
 div.shadow form input[type=submit] {
- margin-top: 20px;
- border-radius: 5px;
- padding: 17px;
- font-size: 16px;
- font-weight: 500;
- cursor: pointer;
- background: #EEE;
- border: 1px #E0E0E0 solid;
- box-shadow: 0 0 3px #CCCCCC, inset 0 0 5px #FAFAFA;
+  margin-top: 20px;
+  border-radius: 5px;
+  padding: 17px;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  background: #EEE;
+  border: 1px #E0E0E0 solid;
+  box-shadow: 0 0 3px #CCCCCC, inset 0 0 5px #FAFAFA;
 }
 
 div.shadow form input:nth-child(1) {
- margin-top: 20px;
+  margin-top: 20px;
 }
 
 div.shadow form div.cancel {
- position: absolute;
- left: 228px;
- top: 0px;
- width: 20px;
- height: 20px;
- background: url(../img/cancel.png) no-repeat;
- background-size: 115%;
- cursor: pointer;
+  position: absolute;
+  left: 228px;
+  top: 0px;
+  width: 20px;
+  height: 20px;
+  background: url(../img/cancel.png) no-repeat;
+  background-size: 115%;
+  cursor: pointer;
 }
