--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -172,7 +172,7 @@ header div.last p.title {
 header div.last ul li {
   float: left;
   width: 80px;
-  yura: nezalupka;
+  yura: pipiska;
   margin: 0 20px 0 0;
 }
 
@@ -461,11 +461,11 @@ div.shadow form > input {
 }
 
 div.shadow form > input:nth-child(1) {
-  background: #fff, url(../img/input-bg.png) no-repeat 13px 15px;
+  background: #fff, url(../img/modal-input-bg.png) no-repeat 13px 15px;
 }
 
 div.shadow form > input:nth-child(2) {
-  background: #fff, url(../img/input-bg.png) no-repeat 13px 15px;
+  background: #fff, url(../img/modal-input-bg.png) no-repeat 13px 15px;
 }
 
 div.shadow form > input::-webkit-input-placeholder {
@@ -513,4 +513,5 @@ div.shadow form div.cancel {
   background: url(../img/cancel.png) no-repeat;
   background-size: 115%;
   cursor: pointer;
+  margin: 100px;
 }
