--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -20,17 +20,22 @@ body {
 	color: #494949;
 }
 
-label {
+label.checkbox {
+  padding: 0 0 0 30px;
+  background: url(../img/checkbox.png) no-repeat;
   cursor: pointer;
 }
 
-label input[type=checkbox] {
-  display: none;
+label.checkbox:hover {
+	background: url(../img/checkbox.png) no-repeat 0 -33px;
 }
 
-label input[type=checkbox] {
-  padding: 0 0 0 30px;
-  background: url(../img/checkbox.png) no-repeat;
+label.checkbox.active {
+	background: url(../img/checkbox.png) no-repeat 0 -65px;
+}
+
+label.checkbox input[type=checkbox] {
+  display: none;
 }
 
 .unselect, .prev, .next, label {
@@ -534,7 +539,7 @@ div.shadow form label {
 	display: block;
 }
 
- label span {
+div.shadow form label span {
 	color: #b4bbc2;
 	font-size: 14px;
 	font-weight: 500;
