--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -158,17 +158,18 @@ header div.logo section {
 }
 
 header div.logo hgroup h1 {
-	font-size: 30px;
+	font-size: 26px;
 	font-weight: 700;
+  line-height: 54px;
 	color: #262626;
 }
 
 header div.logo hgroup h2 {
-	font-size: 18px;
+	font-size: 17px;
 	font-weight: 500;
 	letter-spacing: -1px;
 	color: #383737;
-	line-height: 10px;
+	line-height: 0px;eeeeeeeeeee`  
 }
 
 header div.last {
