--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -170,7 +170,7 @@ header div.logo hgroup h2 {
 	font-weight: 500;
 	letter-spacing: -1px;
 	color: #383737;
-	line-height: 0px;eeeeeeeeeee`  
+	line-height: 0px;  
 }
 
 header div.last {
