--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=PT+Sans);
+
 * {
 	padding: 0;
 	margin: 0;
@@ -420,18 +422,7 @@ header div.last .next {
 	color: #262626;
 	font-weight: 600;
 	margin: 17px 0 13px 0;
-}
-
-.wrapper .content section.items article.item div.info p.price:after {
-	content: '';
-	display: inline-block;
-	position: relative;
-	top: -3px;
-	left: -15px;
-	width: 9px;
-	height: 2px;
-	background: #262626;
-	right: 0;
+  font-family: 'PT Sans', serif;
 }
 
 .wrapper .content section.items div.navigation {
