--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -295,9 +295,9 @@ div.last .next {
 }
 
 .wrapper .content section {
-  float: left;
-  padding: 0 0 0 20px;
-  width: 879px;
+	float: left;
+	padding: 0 0 0 20px;
+	width: 879px;
 }
 
 .wrapper .content section.items {
@@ -507,7 +507,7 @@ div.last .next {
 
 .content h1 {
 	margin: 0px 0 22px 0;
-  font-size: 32px;
+	font-size: 32px;
 }
 
 .content.page h2 {
@@ -556,6 +556,29 @@ footer {
 
 .wrapper section.items .breadcrumbs span {
 	background: none;
+}
+
+.wrapper section.item article.item div.img {
+	width: auto !important;
+	height: auto !important;
+	margin: 0 5px 0 0;
+	border: 0 !important;
+}
+
+.wrapper section.item article.item div.img div.full img {
+	max-height: 420px;
+}
+
+.wrapper section.item article.item div.img div.preview ul li {
+	float: left ;
+	margin: 2px 10px 0 0;
+	border-radius: 6px;
+	overflow: hidden;
+}
+
+.wrapper section.item article.item div.img div.preview ul li.active img, .wrapper section.item article.item div.img div.preview ul li:hover img {
+	box-shadow: inset 0 0 2px 2px #65abd0;
+
 }
 
 .wrapper section.item article.item .info p.title {
@@ -635,34 +658,34 @@ footer {
 /********settings********/
 
 .wrapper .profile section .toggle-switcher {
-  width: 72px;
-  height: 36px;
-  background: #c6ccd2;
-  overflow: auto;
-  border-radius: 44px;
-  cursor: pointer;
-  transition: all .3s ease;
-  position: relative;
+	width: 72px;
+	height: 36px;
+	background: #c6ccd2;
+	overflow: auto;
+	border-radius: 44px;
+	cursor: pointer;
+	transition: all .3s ease;
+	position: relative;
 }
 
 .wrapper .profile section .toggle-switcher span {
-  width: 28px;
-  height: 28px;
-  background: #fff;
-  border-radius: 50%;
-  display: block;
-  top: 4px;
-  left: 4px;
-  position: absolute;
-  transition: all .3s ease;
+	width: 28px;
+	height: 28px;
+	background: #fff;
+	border-radius: 50%;
+	display: block;
+	top: 4px;
+	left: 4px;
+	position: absolute;
+	transition: all .3s ease;
 }
 
 .wrapper .profile section .toggle-switcher.active {
-  background: #24aa98;
+	background: #24aa98;
 }
 
 .wrapper .profile section .toggle-switcher.active span {
-  left: 40px;
+	left: 40px;
 }
 
 footer .wrapper {
