--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -569,16 +569,23 @@ footer {
 	max-height: 420px;
 }
 
+.wrapper section.item article.item div.img div.preview {
+	margin: 13px 0 0 0px;
+}
+
 .wrapper section.item article.item div.img div.preview ul li {
 	float: left ;
 	margin: 2px 10px 0 0;
-	border-radius: 6px;
-	overflow: hidden;
+}
+
+.wrapper section.item article.item div.img div.preview ul li img {
+	margin: 2px;
 }
 
 .wrapper section.item article.item div.img div.preview ul li.active img, .wrapper section.item article.item div.img div.preview ul li:hover img {
-	box-shadow: inset 0 0 2px 2px #65abd0;
-
+	border: 2px #65abd0 solid;
+	margin: 0;
+	border-radius: 6px;
 }
 
 .wrapper section.item article.item .info p.title {
