--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -662,6 +662,39 @@ footer {
 }
 
 /********profile********/
+
+.wrapper .profile aside {
+	padding: 0 !important; 
+	width: auto !important;
+}
+
+.wrapper .profile aside menu {
+	padding: 0;
+}
+
+.wrapper .profile aside menu ul li {
+	padding: 7px 18px 7px 18px;
+	border-bottom: 1px #dbdfe2 solid;
+	color: #494949;
+	font-weight: 600;
+	margin: 0;
+	cursor: pointer;
+}
+
+.wrapper .profile aside menu ul li:hover, .wrapper .profile aside menu ul li.active {
+	color: #24aa98;
+}
+
+.wrapper .profile aside menu ul li:first-child {
+	padding-top: 15px;
+}
+
+
+.wrapper .profile aside menu ul li:last-child {
+	border: 0;
+	padding-bottom: 15px;
+}
+
 /********settings********/
 
 .wrapper .profile section .toggle-switcher {
