--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -109,6 +109,7 @@ header {
 
 header nav {
 	width: 100%;
+  min-width: 1260px;
 	height: 50px;
 	background: #383737;
 }
@@ -414,7 +415,7 @@ div.last .next {
 }
 
 .wrapper .content section.items article.item {
-	padding: 20px 0 20px 0;
+	padding: 20px 0 40px 0;
 	border-bottom: solid 1px #f2f5f8;
 }
 
@@ -561,7 +562,7 @@ footer {
 .wrapper section.item article.item div.img {
 	width: auto !important;
 	height: auto !important;
-	margin: 0 5px 0 0;
+	margin: 0 25px 0 0;
 	border: 0 !important;
 }
 
@@ -580,6 +581,7 @@ footer {
 
 .wrapper section.item article.item div.img div.preview ul li img {
 	margin: 2px;
+  cursor: pointer;
 }
 
 .wrapper section.item article.item div.img div.preview ul li.active img, .wrapper section.item article.item div.img div.preview ul li:hover img {
